@@ -1,3 +1,6 @@
+2008-01-27 Brian Matherly <brian@gramps-project.org>
+	* src/ReportBase/_GraphvizReportDialog.py: Fix 0001656: New menu item
+
 2008-01-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/ExportCSV.py: 
 	* src/plugins/ImportCSV.py: 
